[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui.gd" type="Script" id=1]
[ext_resource path="res://src/npc_system.gd" type="Script" id=2]
[ext_resource path="res://src/time_system.gd" type="Script" id=3]

[node name="World" type="Node2D"]

[node name="TimeSystem" type="Node" parent="."]
script = ExtResource( 3 )

[node name="NpcSystem" type="Node" parent="."]
script = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Label" parent="UI"]
margin_left = 52.2856
margin_top = 15.2857
margin_right = 92.2856
margin_bottom = 29.2857

[node name="AddNpc" type="Button" parent="UI"]
margin_left = 10.0
margin_top = 50.0
margin_right = 22.0
margin_bottom = 70.0
text = "add npc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="UI"]
pause_mode = 2
margin_left = 80.0
margin_top = 50.0
margin_right = 130.0
margin_bottom = 70.0
text = "pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearChanged" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 80.0
margin_right = 50.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeasonChanged" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 100.0
margin_right = 50.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeekdayChanged" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 120.0
margin_right = 50.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayChanged" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 140.0
margin_right = 50.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourChanged" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 160.0
margin_right = 50.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinuteChanged" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 180.0
margin_right = 50.0
margin_bottom = 194.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objects" type="Node2D" parent="."]

[connection signal="pressed" from="UI/PauseButton" to="UI" method="_on_PauseButton_pressed"]
